# 2025-6.4-temp

./: README.md
yaml-convector-2.0/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  mechanism.yaml  yaml-convector-2.0.sln  新建 文本文档.txt
yaml-convector-2.0/yaml-convector-2.0/: CMakeLists.txt  ChemEquil.cpp  ChemEquil.h  ChemistryIO.cpp  ChemistryIO.h  IdealGasPhase.cpp  IdealGasPhase.h  build.bat  cantera_equil.py  debug_species.cpp  run_cantera_equilibrium.py  test_compile.cpp  yaml-convector-2.0.cpp  yaml-convector-2.0.vcxproj  yaml-convector-2.0.vcxproj.filters
yaml-convector-2.0/yaml-convector-2.0/include/: ct_defs.h  utils.h
yaml-convector-2.0/yaml-convector-2.0/yaml-con.3079a651/Debug/: vc143.idb
yaml-convector-2.0/yaml-convector-2.0/yaml-con.3079a651/Debug/yaml-con.3079a651.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  yaml-convector-2.0.lastbuildstate
